--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <title>Тестирование</title>
 <h1>Если вы попали на эту страницу случайно...</h1>
-<p>... - то просто проигнорируйте это :)</p>
+<p>... - то просто проигнорируйте это и закройте вкладку :)</p>
